Version 0.x.x (xxxx-xx-xx)
--------------------------

	* Some change


Version 0.5.2 (2015-01-16)
---------------------------

	* Fix some compatibility problem with Windows and Mac OS X (in the
	last release there were two files call the same except for case).


Version 0.5.1 (2014-12-21)
--------------------------

	* Make the 'reset' available for RoboHydraHead.

	* Potential compatibility problem: now scenarios are checked so
	that they always contain the "heads" property, and don't contain
	any unknown properties. If you are hit by this your scenarios were
	broken anyway, and better to be stricter now than later.

	* Deprecated function name roboHydraHeadType for the more
	consistent robohydraHeadType.

	* Deprecated configuration name corsUrlPath for the more
	consistent corsurlpath in the cors plugin.

	* Deprecated method "chain" in Response objects. See the new
	method "follow" below.

	* New property "headers" for RoboHydraHeadStatic allows the user
	to set arbitrary headers for the head response(s). Add support to
	add headers from the Admin UI.

	* RoboHydra is now easier to embed in your own programs. See the
	"createRoboHydraServer" function.

	* New command-line option --quiet to suppress non-error messages
	to the console.

	* New method "follow" in Response objects. Similar to "chain", but
	called on the receiving object.

	* Other bugfixes and smaller improvements.


Version 0.5 (2014-08-28)
------------------------

	* Potential compatibility problem: dynamic heads registered as
	"high priority" now come *after* the admin plugin. That mostly
	means that (a) you can't replace the Admin UI with your own plugin
	(you'll have to use a different URL) and that (b) you won't get
	all the admin plugin requests in robohydra.log.

	* Deprecated mixed-case configuration variables names for plugins
	(ie. variables like trafficFilePath become now trafficfilepath).

	* Deprecated inconsistent roboHydraHeadType names: some parameters