@@ -1,7 +1,8 @@
 Version 0.x.x (xxxx-xx-xx)
 --------------------------
 
-	* Some change
+	* Accept a list of extra plugin load directories (as opposed to
+	only one)
 
 
 Version 0.5.2 (2015-01-16)
